---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2025-07-19
  Bugfixes:
    - Correct bug when requester is destroy or replace (wrong librairy) [#6]
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2025-07-14
  Features:
    - Add tool for debugging
  Changes:
    - Add some check to avoid crash on nil value for provider (channel changement) [#5]
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2025-07-14
  Bugfixes:
    - Correct bug when provider/requester where deleted the network don't remove them [#5]
  Features:
    - Add label in the gui to better explain when items are requested
  Changes:
    - Rework some aspect of LPN GUI MANAGER to reduce lag spike
    - Add some check to avoid crash on nil value (cargo-pod) [#5]
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2025-07-12
  Bugfixes:
    - Corret a bug where script trying to close mod gui when it's not open [#4]
  Locale:
    - Change some description to be more explicit
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2025-07-08
  Features:
    - Add setting for let free minimum slot in space plaform in order to not stop them [#3]
  Changes:
    - Add migration support for newer version
  Bugfixes:
    - Bug where provider/requester not change channel in their internal settings [#1]
  Locale:
    - Change name in settings (misspelled)
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2025-06-29
  Changes:
    - Mod's first release