@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.7
 Date: ????
-  Changes:
+  Bugfixes:
+    - Correct bug when on copy/paste settings in space-platform [#7]
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.6
 Date: 2025-07-19
